isguizi de mudá o meiqui faiou :)

--- a/T2/Makefile
+++ b/T2/Makefile
@@ -11,7 +11,7 @@ all:
 	gcc -c -g ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c -g ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c -g ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c -g ./src/arvoreB.c -I ./include -o ./obj/arvoreB.o
+	gcc -c -g ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c -g ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
 	gcc -g ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 
@@ -25,7 +25,7 @@ crw:  #compile and run for windows
 	gcc -c ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c ./src/arvoreB.c -I ./include -o ./obj/arvoreB.o
+	gcc -c ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
 	gcc ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 	.\bin\main
@@ -34,7 +34,7 @@ crl: #compile and run for linux
 	gcc -c ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c ./src/arvoreB.c -I ./include -o ./obj/arvoreB.o
+	gcc -c ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
 	gcc ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 	./bin/main
