--- a/T2/Makefile
+++ b/T2/Makefile
@@ -11,10 +11,9 @@ all:
 	gcc -c -g ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c -g ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c -g ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c -g ./src/arvoreB.c -I ./include -o ./obj/arvoreB.o
 	gcc -c -g ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c -g ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
-	gcc -g .T2/apps/main.c ./obj/*.o -I ./include -o ./bin/main
+	gcc -g ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 
 run:
 	./bin/main
@@ -26,18 +25,16 @@ crw:  #compile and run for windows
 	gcc -c ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c ./src/arvoreB.c -I ./include -o ./obj/arvoreB.o
 	gcc -c ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
-	gcc .T2/apps/main.c ./obj/*.o -I ./include -o ./bin/main
+	gcc ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 	.\bin\main
 
 crl: #compile and run for linux
 	gcc -c ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c ./src/arvoreB.c -I ./include -o ./obj/arvoreB.o
 	gcc -c ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
-	gcc .T2/apps/main.c ./obj/*.o -I ./include -o ./bin/main
+	gcc ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 	./bin/main
