--- a/T2/Makefile
+++ b/T2/Makefile
@@ -8,40 +8,23 @@ test2:
 	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -s ./bin/main
 	
 all:
+	clear
 	gcc -c -g ./src/arquivo.c -I ./include -o ./obj/arquivo.o
 	gcc -c -g ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
 	gcc -c -g ./src/registro.c -I ./include -o ./obj/registro.o
 	gcc -c -g ./src/pilha.c -I ./include -o ./obj/pilha.o
 	gcc -c -g ./src/grafo.c -I ./include -o ./obj/grafo.o
+	gcc -c -g ./src/algoritmos.c -I ./include -o ./obj/algoritmos.o
 	gcc -c -g ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
 	gcc -g ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
 
 run:
+	clear
 	./bin/main
-
-runwindows:
-	.\bin\main
-
-crw:  #compile and run for windows
-	gcc -c ./src/arquivo.c -I ./include -o ./obj/arquivo.o
-	gcc -c ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
-	gcc -c ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c -g ./src/pilha.c -I ./include -o ./obj/pilha.o
-	gcc -c -g ./src/grafo.c -I ./include -o ./obj/grafo.o
-	gcc -c ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
-	gcc ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
-	.\bin\main
 
 crl: #compile and run for linux
-	clear
-	gcc -c ./src/arquivo.c -I ./include -o ./obj/arquivo.o
-	gcc -c ./src/funcoesFornecidas.c -I ./include -o ./obj/funcoesFornecidas.o
-	gcc -c ./src/registro.c -I ./include -o ./obj/registro.o
-	gcc -c -g ./src/pilha.c -I ./include -o ./obj/pilha.o
-	gcc -c -g ./src/grafo.c -I ./include -o ./obj/grafo.o
-	gcc -c ./src/funcionalidades.c -I ./include -o ./obj/funcionalidades.o
-	gcc ./apps/main.c ./obj/*.o -I ./include -o ./bin/main
-	./bin/main
+	make all
+	make run
 
 push:
 	git pull
